; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxva2_mpeg2.c_dxva2_mpeg2_end_frame.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxva2_mpeg2.c_dxva2_mpeg2_end_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.MpegEncContext* }
%struct.MpegEncContext = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32, %struct.dxva2_picture_context* }
%struct.dxva2_picture_context = type { i64, i64, i32, i32 }

@commit_bitstream_and_slice_buffer = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*)* @dxva2_mpeg2_end_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dxva2_mpeg2_end_frame(%struct.TYPE_6__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca %struct.MpegEncContext*, align 8
  %5 = alloca %struct.dxva2_picture_context*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 1
  %9 = load %struct.MpegEncContext*, %struct.MpegEncContext** %8, align 8
  store %struct.MpegEncContext* %9, %struct.MpegEncContext** %4, align 8
  %10 = load %struct.MpegEncContext*, %struct.MpegEncContext** %4, align 8
  %11 = getelementptr inbounds %struct.MpegEncContext, %struct.MpegEncContext* %10, i32 0, i32 0
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 1
  %14 = load %struct.dxva2_picture_context*, %struct.dxva2_picture_context** %13, align 8
  store %struct.dxva2_picture_context* %14, %struct.dxva2_picture_context** %5, align 8
  %15 = load %struct.dxva2_picture_context*, %struct.dxva2_picture_context** %5, align 8
  %16 = getelementptr inbounds %struct.dxva2_picture_context, %struct.dxva2_picture_context* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp sle i64 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %1
  %20 = load %struct.dxva2_picture_context*, %struct.dxva2_picture_context** %5, align 8
  %21 = getelementptr inbounds %struct.dxva2_picture_context, %struct.dxva2_picture_context* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = icmp sle i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %19, %1
  store i32 -1, i32* %2, align 4
  br label %48

25:                                               ; preds = %19
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %27 = load %struct.MpegEncContext*, %struct.MpegEncContext** %4, align 8
  %28 = getelementptr inbounds %struct.MpegEncContext, %struct.MpegEncContext* %27, i32 0, i32 0
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load %struct.dxva2_picture_context*, %struct.dxva2_picture_context** %5, align 8
  %33 = getelementptr inbounds %struct.dxva2_picture_context, %struct.dxva2_picture_context* %32, i32 0, i32 3
  %34 = load %struct.dxva2_picture_context*, %struct.dxva2_picture_context** %5, align 8
  %35 = getelementptr inbounds %struct.dxva2_picture_context, %struct.dxva2_picture_context* %34, i32 0, i32 2
  %36 = load i32, i32* @commit_bitstream_and_slice_buffer, align 4
  %37 = call i32 @ff_dxva2_common_end_frame(%struct.TYPE_6__* %26, i32 %31, i32* %33, i32 4, i32* %35, i32 4, i32 %36)
  store i32 %37, i32* %6, align 4
  %38 = load i32, i32* %6, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %46, label %40

40:                                               ; preds = %25
  %41 = load %struct.MpegEncContext*, %struct.MpegEncContext** %4, align 8
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = call i32 @ff_mpeg_draw_horiz_band(%struct.MpegEncContext* %41, i32 0, i32 %44)
  br label %46

46:                                               ; preds = %40, %25
  %47 = load i32, i32* %6, align 4
  store i32 %47, i32* %2, align 4
  br label %48

48:                                               ; preds = %46, %24
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32 @ff_dxva2_common_end_frame(%struct.TYPE_6__*, i32, i32*, i32, i32*, i32, i32) #1

declare dso_local i32 @ff_mpeg_draw_horiz_band(%struct.MpegEncContext*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
